# solana-pinocchio-examples

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
basics/account-data/: Cargo.toml  codama-node.ts
basics/account-data/src/: lib.rs  processor.rs  util.rs
basics/account-data/tests/: account-data.test.ts
basics/close-account/: Cargo.toml  codama-node.ts
basics/close-account/src/: lib.rs  processor.rs
basics/close-account/tests/: close-account.rs  close-account.test.ts
basics/counter/: Cargo.toml  codama-node.ts
basics/counter/src/: lib.rs  processor.rs
basics/counter/tests/: counter.rs  counter.test.ts
basics/cross-program-invocation/: Cargo.toml  codama-node.ts
basics/cross-program-invocation/src/: lib.rs  processor.rs
basics/cross-program-invocation/tests/: counter_cpi.rs  cross-program-invocation.test.ts
basics/favorites/: Cargo.toml  codama-node.ts
basics/favorites/src/: error.rs  lib.rs  processor.rs
basics/favorites/src/instructions/: create_pda.rs  get_pda.rs  mod.rs
basics/favorites/src/state/: favorites.rs
basics/favorites/tests/: favorites.rs  favorites.test.ts
basics/hello-solana/: Cargo.toml  README.md  generate-client.ts
basics/hello-solana/src/: lib.rs
basics/hello-solana/tests/: hello_solana.rs  hello_solana.test.ts
basics/transfer-sol/: Cargo.toml  codama-node.ts
basics/transfer-sol/src/: lib.rs  processor.rs
basics/transfer-sol/tests/: transfer-sol.rs  transfer-sol.test.ts
clients/: README.md  package.json  shared.ts
clients/accountData/accounts/: addressInfo.ts
clients/accountData/instructions/: create.ts
clients/accountData/programs/: accountData.ts
clients/counter/accounts/: counter.ts
clients/counter/instructions/: create.ts  decrease.ts  increase.ts
clients/counter/programs/: counter.ts
clients/createToken/instructions/: createToken.ts
clients/createToken/programs/: createToken.ts
clients/crossProgramInvocation/instructions/: create.ts  (+2 more)
idl/: associated_token_program.json
pinocchio-helper/: Cargo.toml
test-on-devnet/: README.md  package.json  tsconfig.json
test-on-devnet/hello-solana/: create-token.test.ts
tokens/create-token/: Cargo.toml  codama-node.ts
tokens/escrow/: Cargo.toml
tokens/pda-mint-authority/: Cargo.toml  codama-node.ts
tokens/pda-mint-authority/src/: lib.rs  processor.rs
tokens/pda-mint-authority/src/instructions/: create_token.rs  init.rs  mint_token.rs  mod.rs
tokens/pda-mint-authority/src/state/: mint_authority.rs  mod.rs
tokens/pda-mint-authority/tests/: pda-mint-authority.rs  pda-mint-authority.test.ts
tokens/spl-token-minter/: Cargo.toml  codama-node.ts
tokens/token-2022-basic/: Cargo.toml  codama-node.ts
tokens/transfer-tokens/: Cargo.toml  codama-node.ts  generate-client.ts
(+87 files in other folders)
