[workspace]
resolver = "2"
members = ["basics/*", "compression/*", "oracles/*", "tokens/*"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HongThaiPham/solana-pinocchio-examples"
rust-version = "1.79"


[workspace.dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-log = "0.4.0"

mollusk-svm = "0.1.5"
solana-sdk = "2.2.2"
