[workspace]
resolver = "2"
members = [
  "basics/*",
  "compression/*",
  "oracles/*",
  "pinocchio-helper",
  "tokens/*",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HongThaiPham/solana-pinocchio-examples"
rust-version = "1.79"


[workspace.dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-log = "0.4.0"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
pinocchio-associated-token-account = "0.1.1"


mollusk-svm = "0.1.5"
solana-sdk = "2.2.2"
