[package]
name = "hello-solana"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-sdk = { workspace = true }
